[workspace]
resolver = "2"
members = ["hearsay-ipfs"]

[profile.release]
lto = true

[workspace.dependencies]
bytes = { version = "1.9.0", default-features = false }
cid = { version = "0.11.1" }
libp2p = { version = "0.54.1", default-features = false }
thiserror = { version = "2.0.1", default-features = false }
tokio = { version = "1.41.1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = [ "log" ] }
