[workspace]
resolver = "2"
members = ["hearsay-ipfs"]

[profile.release]
lto = true

[workspace.dependencies]
bytes = { version = "1.9.0", default-features = false }
cid = { version = "0.11.1", default-features = false }
clap = { version = "4.5.26", features = [ "derive" ] }
libp2p = { version = "0.55.0", default-features = false }
prost = { version = "0.13.4", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
tokio = { version = "1.43.0", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = [ "log" ] }
