[package]
name = "hearsay-ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
cid.workspace = true
multihash-codetable = "0.1.4"
multihash-derive = "0.9.1"
tokio-util = { version = "0.7.12", default-features = false }
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { features = [ "kad", "macros", "quic", "dns", "tls", "noise", "yamux", "tcp", "tokio" ], workspace = true }
tokio = { features = [ "full" ], workspace = true } # TODO: reduce dependencies

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { features = [ "noise", "wasm-bindgen" ], workspace = true }
wasm-bindgen-futures = "0.4.45"

[dev-dependencies]
tokio = { features = ["full"], workspace = true }
