[package]
name = "hearsay-ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes.workspace = true
cid.workspace = true
multihash-codetable = "0.1.4"
multihash-derive = "0.9.1"
prost.workspace = true
thiserror.workspace = true
tokio-util = { version = "0.7.13", default-features = false }
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { features = [ "kad", "macros", "quic", "dns", "tls", "noise", "yamux", "tcp", "tokio" ], workspace = true }
prost = { features = [ "std", "derive" ], workspace = true }
tokio = { features = [ "full" ], workspace = true } # TODO: reduce dependencies

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { features = [ "macros", "noise", "wasm-bindgen" ], workspace = true }
prost = { features = [ "derive" ], workspace = true }
wasm-bindgen-futures = "0.4.49"

[dev-dependencies]
tokio = { features = ["full"], workspace = true }

[features]
default = []

[build-dependencies]
prost-build = "0.13.4"
